--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Elshan Dzhafarov <elshan@balancerlabs.dev>"
   ],
   "scripts": {
-    "build": "yarn workspaces foreach --parallel --jobs unlimited --verbose run build && yarn compile && rm -rf artifacts/build-info",
+    "build": "yarn compile && rm -rf artifacts/build-info",
     "compile": "hardhat compile",
     "compile:watch": "nodemon --ext sol --exec yarn compile",
     "lint": "yarn lint:solidity && yarn lint:typescript",
@@ -26,7 +26,11 @@
     "prettier": "npx prettier --write --plugin=prettier-plugin-solidity 'contracts/**/*.sol' 'test/**/*.sol'",
     "test": "yarn test:hardhat && yarn test:forge",
     "test:hardhat": "hardhat test",
-    "test:forge": "yarn build && REUSING_HARDHAT_ARTIFACTS=true forge test --ffi -vvv"
+    "test:forge": "yarn build && REUSING_HARDHAT_ARTIFACTS=true forge test --ffi -vvv",
+    "test:medusa": "medusa fuzz --config medusa.json",
+    "slither-install": "python3 -m venv slither && bash -c 'source slither/bin/activate && pip3 install https://github.com/crytic/slither/releases/download/0.10.1/0.10.1.zip'",
+    "slither": "yarn compile --force && bash -c 'source slither/bin/activate && slither --compile-force-framework hardhat --ignore-compile . --config-file .slither.config.json'",
+    "slither:triage": "yarn compile && bash -c 'source slither/bin/activate && slither --compile-force-framework hardhat --ignore-compile . --config-file .slither.config.json --triage-mode'"
   },
   "packageManager": "yarn@4.0.0-rc.42",
   "dependencies": {
@@ -59,7 +63,7 @@
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^6.13.5",
-    "forge-std": "https://github.com/foundry-rs/forge-std.git#v1.8.1",
+    "forge-std": "https://github.com/foundry-rs/forge-std.git#v1.9.6",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-ignore-warnings": "^0.2.11",
